--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.1",
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
